// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar el contador 1`] = `
<div
  className="productCard "
  style={Object {}}
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProductCard debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard "
  style={Object {}}
>
  <h1>
    Product Card
  </h1>
</div>
`;
